# fastapi-default

./: .dockerignore  .env  .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  mariadb-dev.sh  pyproject.toml  requirements.txt  start.py  zip_publisher.py
alembic/: env.py
alembic/versions/: 159100757125_first_commit.py  b2bcda059993_create_logs_table.py  bc938af20f83_update.py  c5cfbcc887e9_first_commit.py
app/: celery_app.py  celery_worker.py  command.py  containers.py  main.py  stream_worker.py  worker.py
app/api/: __init__.py
app/auth/: dependencies.py  jwt.py
app/consumer/: __init__.py  stream.py  test_worker.py
app/consumers/: __init__.py  stream.py  test_worker.py
app/core/: auth.py  containers.py  context.py  database.py  exception.py  lifespan.py  logging.py  middleware.py  redis.py  router.py  settings.py  setup.py  stream.py
app/db/: database.py  query_loader.py  session.py
app/exceptions/: PageAuthException.py  SystemException.py
app/middleware/: logging_middleware.py
app/models/: response.py  user.py
app/mq/: publisher.py  worker.py
app/page/: __init__.py
app/repos/: base.py  base_repo.py  logs_repo.py  user_info_repo.py  user_repo.py
app/repositories/: logs_repo.py  user_repo.py  user_repository.py
app/routes/: __init__.py  main.py  page.py  pages.py  system.py  test.py  user.py
app/schemas/: token.py  user.py
app/services/: user_service.py
app/tasks/: __init__.py  my_task.py  user_task.py
app/templates/: index.html
app/utils/: datetime.py  dict.py  error.py  hash.py  jwt.py  logs.py  template.py
docker/: Dockerfile  docker-compose.yml
infra/: install.sql
infra/docker/: Dockerfile  docker-compose.yml
public/: 401.html  README.txt  index.html  login.html
static/js/: common.js
template/: index.html  index.j2  system-init.j2
template/error/: 401.j2  (+2 more)
(+22 files in other folders)
