[project]
name = "fastapi-default"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aio-pika>=9.5.5",
    "aiomysql>=0.2.0",
    "celery[redis]>=5.5.3",
    "dependency-injector>=4.48.1",
    "fastapi[all]>=0.115.14",
    "jinja2>=3.1.6",
    "pydantic-settings>=2.10.1",
    "sqlalchemy[asyncio]>=2.0.41",
]
