[project]
name = "fastapi-default"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aio-pika>=9.5.5",
    "aiofiles>=24.1.0",
    "argon2-cffi>=25.1.0",
    "asyncmy>=0.2.10",
    "celery>=5.5.3",
    "contextvars>=2.4",
    "databases>=0.9.0",
    "dependency-injector>=4.48.1",
    "fastapi[all]>=0.115.14",
    "faststream[rabbit]>=0.5.48",
    "jinja2>=3.1.6",
    "jinja2-async-environment>=0.14.5",
    "passlib[bcrypt]>=1.7.4",
    "playwright>=1.53.0",
    "pydantic-settings>=2.10.1",
    "python-jose[cryptography]>=3.5.0",
    "redis>=6.2.0",
    "sqlalchemy>=2.0.41",
    "taskiq>=0.11.18",
    "taskiq-aio-pika>=0.4.3",
    "alembic==1.15.1",
    "psycopg2==2.9.10",
    "pymysql>=1.1.2",
]
